Snap + Axis lock gives unexpected results #82386

Closed
opened 2020-11-04 00:37:55 +01:00 by Nahuel Belich · 6 comments

System Information
Operating system: Linux-5.4.0-52-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.80.02

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-01 20:34, hash: c887a50f62
Worked:2.83.x

Short description of error
Move a vertex constraning an axis plus using face snap gives un predicted results.
fail.mp4

This is how worked in 2.83, much more predictable to be able to place a component somewhere over the snaped point
works.mp4

Exact steps for others to reproduce the error
snapdemo.blend
1- Press G to start moving
2- Press Shift+Z to lock the Z axis
3-Try to move around, the vertex should jump around unpredictably

**System Information** Operating system: Linux-5.4.0-52-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.80.02 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-01 20:34, hash: `c887a50f62` Worked:2.83.x **Short description of error** Move a vertex constraning an axis plus using face snap gives un predicted results. [fail.mp4](https://archive.blender.org/developer/F9186819/fail.mp4) This is how worked in 2.83, much more predictable to be able to place a component somewhere over the snaped point [works.mp4](https://archive.blender.org/developer/F9186822/works.mp4) **Exact steps for others to reproduce the error** [snapdemo.blend](https://archive.blender.org/developer/F9186825/snapdemo.blend) 1- Press G to start moving 2- Press Shift+Z to lock the Z axis 3-Try to move around, the vertex should jump around unpredictably
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Well, this behavior is kind of intentional. (See D5608)
But I recognize that snapping to the intersection between the face plane and the constraint plane may not be very useful in all cases.
So I am going to disable this feature.

Thanks for the report.

Well, this behavior is kind of intentional. (See [D5608](https://archive.blender.org/developer/D5608)) But I recognize that snapping to the intersection between the face plane and the constraint plane may not be very useful in all cases. So I am going to disable this feature. Thanks for the report.

This issue was referenced by eb21222e64

This issue was referenced by eb21222e64f4333181d09b675b5505751ff2154c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-11-04 19:23:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82386
No description provided.