Transform: Disable snap to plane-face intersection

This feature was added in D5608.
But in practice this confuses more than it helps.
This fixes T82386.